--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1687,10 +1687,10 @@ jobs:
                export REL_VER_DASH=${REL_VER//./-}
                export FAM_NAME=$REL_VER_DASH"-final-u14-x86-64"
             - |
-               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES "IMAGE_FAM_NAME")
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -1778,9 +1778,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -1958,9 +1958,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2048,9 +2048,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2138,9 +2138,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2228,9 +2228,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2318,9 +2318,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2408,9 +2408,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2498,9 +2498,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2588,9 +2588,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -2678,9 +2678,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
