--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -660,9 +660,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u16-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
