updating deps for v624_u14_x8664_gce_img

--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -2460,6 +2460,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
+      - IN: reqKick_repo_file_tag
       - IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
