updating deps for v624_u14_x8664_gce_img

--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -2492,16 +2492,17 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.2.4"
           script:
+#               export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
             - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
-               export FAM_NAME=$IMG_VER_DASH"-final-u14-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+               export FAM_NAME=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
