debug NODE_DOWNLOAD_URL

--- a/shippable.yml
+++ b/shippable.yml
@@ -92,8 +92,8 @@ jobs:
         switch: off
       - IN: admiralami_params
         switch: off
-#      - IN: genExec_dd_tag
-#      - IN: genExec_sh_tag
+      - IN: genExec_dd_tag
+      - IN: genExec_sh_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
