fixing node_download url problem

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -812,8 +812,9 @@ jobs:
       - IN: c7javall_x8664_tag
       - IN: c7cppall_x8664_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_file_tag
       - IN: c7repLib_x8664_tag
+      - IN: cexec_repo_file_tag
+      - IN: reqKick_repo_file_tag
       - IN: u16reqProc_dd_tag
       - IN: u16reqProc_dd_img
         switch: off
