fixing node_download url problem

--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1549,6 +1549,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u16repLib_x8664_tag
+      - IN: reqKick_repo_file_tag
       - IN: u16reqProc_dd_tag
       - IN: u16reqProc_dd_img
         switch: off
