--- a/images/aarch64/Ubuntu_16.04/shippable.yml
+++ b/images/aarch64/Ubuntu_16.04/shippable.yml
@@ -140,9 +140,9 @@ jobs:
           script:
             - REL_VER=$(shipctl get_resource_version_key "$IMG_BASE" "versionName")
             - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
-            - IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
-            - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
-            - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
+            - IMG_NAME=$(shipctl get_resource_version_key "$IMG_OUT" "sourceName")
+            - DH_USR_NAME=$(shipctl get_integration_resource_field "$IMG_OUT" "userName")
+            - DH_PASS=$(shipctl get_integration_resource_field "$IMG_OUT" "password")
             - pushd $(shipctl get_resource_state "$RES_REPO")
             - docker build -t=$IMG_NAME:$REL_VER --pull .
             - docker login -u $DH_USR_NAME -p $DH_PASS
