fixing node_download url problem

--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -398,7 +398,7 @@ jobs:
             - |
                git remote add up $GIT_PATH
                git remote -v
-               git checkout $REPO_COMMIT
+               git checkout master
             - |
                git pull --tags
                if git tag -d $REL_VER; then
