--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -642,8 +642,8 @@ jobs:
               env:
                 - BASE_IMG_RES: "patch_w2k16_x8664_gce_img"
                 - NODE_RES: "node_repo_file_tag"
-                - REQPROC_RES: "u16reqProc_dd_tag"
-                - REQPROC_IMG_RES: "u16reqProc_dd_img"
+                - REQPROC_RES: "w2k16reqProc_dd_tag"
+                - REQPROC_IMG_RES: "w2k16reqProc_dd_img"
                 - REQKICK_RES: "reqKick_repo_file_tag"
                 - MACHINE_TYPE: "n1-standard-8"
                 - REGION: "us-east1"
