--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -633,7 +633,7 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: final_w2k16_x8664_gce_img
+      - IN: patch_w2k16_x8664_gce_img
         switch: off
       - TASK:
           name: build_gce_image
@@ -682,9 +682,8 @@ jobs:
                shipctl copy_file_from_resource_state "$BASE_IMG_RES" "images.txt" .
                echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
                shipctl replace vars.json
-               cat vars.json
-#               packer validate -var-file=vars.json packer.json
-#               packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
+               packer validate -var-file=vars.json packer.json
+               packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
     on_success:
       script:
