--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1438,40 +1438,28 @@ jobs:
       script:
         - cat output.txt
 
-  - name: final_u16_x8664_gce_img
+  - name: v634_u16_x8664_gce_img
     type: runSh
-    triggerMode: parallel
     dependencyMode: strict
+    triggerMode: parallel
     steps:
-      - IN: u16_x8664_tag
-      - IN: u16all_x8664_tag
-      - IN: u16nodall_x8664_tag
-      - IN: u16pytall_x8664_tag
-      - IN: u16javall_x8664_tag
-      - IN: u16cppall_x8664_tag
-      - IN: u16cloall_x8664_tag
-      - IN: u16golall_x8664_tag
-      - IN: u16scaall_x8664_tag
-      - IN: u16ruball_x8664_tag
-      - IN: u16phpall_x8664_tag
-      - IN: u16microbase_x8664_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
-      - IN: reqKick_repo_file_tag
       - IN: u16repLib_x8664_tag
+      - IN: reqKick_repo_file_tag
       - IN: u16reqProc_dd_tag
       - IN: u16reqProc_dd_img
         switch: off
       - IN: buildami_repo
         switch: off
-      - IN: patch_u16_x8664_gce_img
-        switch: off
       - IN: prod_release
         switch: off
       - IN: ship_bits_gcp
         switch: off
+      - IN: patch_u16_x8664_gce_img
+        switch: off
       - TASK:
-          name: final_u16_gce_image
+          name: build_gce_image
           runtime:
             options:
               env:
@@ -1488,15 +1476,15 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
+                - IMG_VER: "v6.3.4"
           script:
             - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
-               export IMG_VER=$REL_VER
-               export REL_VER_DASH=${REL_VER//./-}
-               export FAM_NAME=$REL_VER_DASH"-final-u16-x86-64"
+               export IMG_VER_DASH=${IMG_VER//./-}
+               export FAM_NAME=$IMG_VER_DASH"-final-u16-x86-64"
+               export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
@@ -1541,7 +1529,7 @@ jobs:
       script:
         - cat output.txt
 
-  - name: v634_u16_x8664_gce_img
+  - name: v644_u16_x8664_gce_img
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
@@ -1559,14 +1547,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: final_u16_x8664_gce_img
+      - IN: patch_u16_x8664_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "final_u16_x8664_gce_img"
+                - BASE_IMG_RES: "patch_u16_x8664_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u16reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u16reqProc_dd_img"
@@ -1579,7 +1567,7 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
-                - IMG_VER: "v6.3.4"
+                - IMG_VER: "v6.4.4"
           script:
             - set -o pipefail
             - |
@@ -1591,6 +1579,7 @@ jobs:
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
