--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -800,34 +800,28 @@ jobs:
       script:
         - cat output.txt
 
-  - name: final_c7_x8664_gce_img
+  - name: v634_c7_x8664_gce_img
     type: runSh
-    triggerMode: parallel
     dependencyMode: strict
+    triggerMode: parallel
     steps:
-      - IN: c7_x8664_tag
-      - IN: c7all_x8664_tag
-      - IN: c7nodall_x8664_tag
-      - IN: c7pytall_x8664_tag
-      - IN: c7javall_x8664_tag
-      - IN: c7cppall_x8664_tag
       - IN: node_repo_file_tag
-      - IN: c7repLib_x8664_tag
       - IN: cexec_repo_file_tag
+      - IN: c7repLib_x8664_tag
       - IN: reqKick_repo_file_tag
       - IN: u16reqProc_dd_tag
       - IN: u16reqProc_dd_img
         switch: off
       - IN: buildami_repo
         switch: off
-      - IN: patch_c7_x8664_gce_img
-        switch: off
       - IN: prod_release
         switch: off
       - IN: ship_bits_gcp
         switch: off
+      - IN: patch_c7_x8664_gce_img
+        switch: off
       - TASK:
-          name: final_c7_gce_image
+          name: build_gce_image
           runtime:
             options:
               env:
@@ -844,15 +838,15 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "centos"
+                - IMG_VER: "v6.3.4"
           script:
             - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
-               export IMG_VER=$REL_VER
-               export REL_VER_DASH=${REL_VER//./-}
-               export FAM_NAME=$REL_VER_DASH"-final-c7-x86-64"
+               export IMG_VER_DASH=${IMG_VER//./-}
+               export FAM_NAME=$IMG_VER_DASH"-final-c7-x86-64"
+               export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
@@ -897,7 +891,7 @@ jobs:
       script:
         - cat output.txt
 
-  - name: v634_c7_x8664_gce_img
+  - name: v644_c7_x8664_gce_img
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
@@ -915,14 +909,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: final_c7_x8664_gce_img
+      - IN: patch_c7_x8664_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "final_c7_x8664_gce_img"
+                - BASE_IMG_RES: "patch_c7_x8664_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u16reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u16reqProc_dd_img"
@@ -935,7 +929,7 @@ jobs:
                 - PROJECT_ID: "ship-bits"
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "centos"
-                - IMG_VER: "v6.3.4"
+                - IMG_VER: "v6.4.4"
           script:
             - set -o pipefail
             - |
@@ -947,6 +941,7 @@ jobs:
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
