--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -753,6 +753,7 @@ jobs:
             - export AMI_ID=$(shipctl get_resource_version_key windowsbaseami_prep versionName)
             - export RES_IMG_VER_NAME_DASH=$(shipctl get_resource_version_key windowsbaseami_prep RES_IMG_VER_NAME_DASH)
             - export RES_IMG_VER_NAME=$(shipctl get_resource_version_key windowsbaseami_prep RES_IMG_VER_NAME)
+            - shipctl get_resource_version_key windowsbaseami_prep IMAGE_NAMES_SPACED
             - export IMAGE_NAMES_SPACED="$(shipctl get_resource_version_key windowsbaseami_prep IMAGE_NAMES_SPACED)"
             - shipctl replace bootstrap_win.txt vars.json
             - packer validate -var-file=vars.json basePatchAMI.json
